--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" [ngClass]="{'show': navbarOpen}">
       <ul class="navbar-nav mr-auto">
         <li routerLinkActive="active" class="nav-item">
-          <a href="#" class="nav-link">About</a>
+          <a routerLink="about" class="nav-link">About</a>
         </li>
         <li routerLinkActive="active" class="nav-item">
           <a href="#" class="nav-link">Characters</a>
