templates for characters and episodes

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,9 +3,7 @@
   Max & Ruby is about two sibling bunnies, a little brother named Max and a big sister named Ruby. It primarily focuses
   on how these two siblings try to get along with each other in everyday life, despite that they seemingly almost never
   want the same thing simultaneously. The story that goes on in each episode usually finishes with mischievous, cute,
-  and hilarious results! Also, in the episodes that focus on Ruby trying to accomplish something for personal reasons
-  or to earn a Bunny Scout badge, she actually wouldn't have accomplished her goal without Max doing something for his
-  personal benefit that surprisingly helps her.
+  and hilarious results!
 </p>
 <p>
   This series also features Max and Ruby's grandmother, Grandma, and all of their friends and friendly neighbors, such
@@ -36,9 +34,9 @@
   or phrases that Max says in an episode, and find out which characters have made an appearance in an episode.
 </p>
 <p>
-  I have also created a "depth chart" for Ruby's best friend, where each friend is placed based on episode appearances
-  throughout the series. I think that the more appearances that friend makes, the closer that friend is to Ruby. Check
-  it out for yourself.
+  I have also created a "depth chart", in the style of a football team's depth chart, for Ruby's best friend, where
+  each friend is placed based on episode appearances throughout the series. I think that the more appearances that
+  friend makes, the closer that friend is to Ruby. Check it out for yourself.
 </p>
 <p>
   About the sign in page. No the users can't create user accounts on this app. Sorry. The sign in feature is only for
@@ -50,5 +48,8 @@
 <div class="text-center">
   <img src="assets/img/20200617_034453.jpg" width="500" alt="Max's Train Ride">
   <p class="font-italic">"Train ride!"</p>
+  <br/>
+  <img src="assets/img/20200419_020656.jpg" alt="Louise's Secret">
+  <p class="font-italic">&#9834; Louise has a secret and she's gonna tell me! &#9834;</p>
 </div>
 <br/><br/>
