--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,13 +10,13 @@
           <a routerLink="about" class="nav-link">About</a>
         </li>
         <li routerLinkActive="active" class="nav-item">
-          <a href="#" class="nav-link">Characters</a>
+          <a routerLink="characters" class="nav-link">Characters</a>
         </li>
         <li routerLinkActive="active" class="nav-item">
-          <a href="#" class="nav-link">Episodes</a>
+          <a routerLink="episodes" class="nav-link">Episodes</a>
         </li>
         <li routerLinkActive="active" class="nav-item">
-          <a href="#" class="nav-link">Ruby's Best Friend Depth Chart</a>
+          <a routerLink="depth-chart" class="nav-link">Ruby's Best Friend Depth Chart</a>
         </li>
         <li routerLinkActive="active" class="nav-item">
           <a href="#" class="nav-link">New Episode</a>
