made images fluid

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -46,10 +46,10 @@
 <p>"App!"</p>
 <br/>
 <div class="text-center">
-  <img src="assets/img/20200617_034453.jpg" width="500" alt="Max's Train Ride">
+  <img src="assets/img/20200617_034453.jpg" width="500" alt="Max's Train Ride" class="img-fluid">
   <p class="font-italic">"Train ride!"</p>
   <br/>
-  <img src="assets/img/20200419_020656.jpg" alt="Louise's Secret">
+  <img src="assets/img/20200419_020656.jpg" alt="Louise's Secret" class="img-fluid">
   <p class="font-italic">&#9834; Louise has a secret and she's gonna tell me! &#9834;</p>
 </div>
 <br/><br/>
