--- a/src/app/depth-chart/depth-chart.component.html
+++ b/src/app/depth-chart/depth-chart.component.html
@@ -1,1 +1,29 @@
-<p>depth-chart works!</p>
+<table class="table table-striped table-responsive-sm">
+  <thead>
+    <tr>
+      <td>POSITION</td>
+      <td>FIRST</td>
+      <td>SECOND</td>
+      <td>THIRD</td>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Ruby's Best Friend</td>
+      <td>Louise</td>
+      <td>Valerie</td>
+      <td>Martha</td>
+    </tr>
+  </tbody>
+</table>
+<br/>
+<div class="text-center">
+  <img src="assets/img/20200615_034942.jpg" alt="Louise" class="img-fluid" width="500">
+  <p class="font-italic">"If an apple a day keeps the doctor away, then two apples a day keep the doctor away..."</p>
+  <p class="font-italic">"For a whole week!"</p>
+  <p class="font-italic">(hehe I'm Ruby's best friend)</p>
+  <br/>
+  <img src="assets/img/20200426_050240.jpg" alt="All together" class="img-fluid" width="500">
+  <p class="font-italic">"YAAAY!"</p>
+</div>
+<br/><br/>
