--- a/src/app/episodes/episodes.component.html
+++ b/src/app/episodes/episodes.component.html
@@ -1,4 +1,8 @@
 <div class="text-center">
-  <img src="assets/img/20200625_021638.jpg" alt="Ghost Bunny" width="500">
+  <img src="assets/img/20200418_043604.jpg" alt="Find" width="500" class="img-fluid">
+  <p class="font-italic">"Find!"</p>
+  <br/>
+  <img src="assets/img/20200625_021638.jpg" alt="Ghost Bunny" width="500" class="img-fluid">
   <p class="font-italic">"Ghost Bunny!"</p>
 </div>
+<br/><br/>
