--- a/src/app/characters/characters.component.html
+++ b/src/app/characters/characters.component.html
@@ -1,5 +1,7 @@
 <div class="text-center">
-  <img src="assets/img/20200418_043306.jpg" alt="Max Meets Morris" width="500">
+  <img src="assets/img/20200418_043306.jpg" alt="Max Meets Morris" width="500" class="img-fluid">
   <p class="font-italic">What could Max and Morris possibly be thinking?</p>
+  <br/>
+  <img src="assets/img/20200424_193719.jpg" alt="Christmas Max" width="500" class="img-fluid">
 </div>
 <br/><br/>
