--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,23 @@
 <div class="text-center">
   <h5>Phil's</h5>
-  <img src="https://upload.wikimedia.org/wikipedia/en/5/56/Max_%26_Ruby_logo.png" alt="Max & Ruby logo">
+  <img
+    src="https://upload.wikimedia.org/wikipedia/en/5/56/Max_%26_Ruby_logo.png"
+    alt="Max & Ruby logo"
+    class="img-fluid"
+  >
   <h5>Fan App</h5>
   <br/>
   <h1>Welcome! Bienvenue !</h1>
   <h5>Please, take a look around and enjoy!</h5>
   <h5>"App!"</h5>
   <br/>
-  <img src="assets/img/20200628_150626.jpg" width="500" alt="Max's Easter Egg Hunt">
+  <img src="assets/img/20200628_150626.jpg" width="500" alt="Max's Easter Egg Hunt" class="img-fluid">
   <p class="font-italic">"Max, did you hide them?"</p>
   <br/>
-  <img src="assets/img/20200616_033850.jpg" width="500" alt="Max face">
+  <img src="assets/img/20200616_033850.jpg" width="500" alt="Max face" class="img-fluid">
   <p>Max's cute, classic "up to no good" face!</p>
+  <br/>
+  <img src="assets/img/20200616_145112.jpg" width="500" alt="Max again" class="img-fluid">
+  <p class="font-italic">"Thank you!"</p>
   <br/><br/>
 </div>
