depth chart notes

--- a/src/app/depth-chart/depth-chart.component.html
+++ b/src/app/depth-chart/depth-chart.component.html
@@ -16,6 +16,22 @@
     </tr>
   </tbody>
 </table>
+<h3>Notes:</h3>
+<ul>
+  <li>
+    Friends are placed according to episode appearances. To me, a friend is closer to Ruby if she makes more
+    appearances.
+  </li>
+  <li>
+    All of these friends, like Ruby, are members of the Bunny Scouts. They all make up the same troop, lead by Bunny
+    Scout Leader.
+  </li>
+  <li>
+    Despite that Ruby and Louise seem to have a crush on Roger Piazza (based on the way they both say hi to him), he
+    is not on this chart because he doesn't really hang out with Ruby a lot, despite making quite a few appearances
+    himself. He has shown a preference for hanging out with Max instead.
+  </li>
+</ul>
 <br/>
 <div class="text-center">
   <img src="assets/img/20200615_034942.jpg" alt="Louise" class="img-fluid" width="500">
