--- a/src/app/depth-chart/depth-chart.component.html
+++ b/src/app/depth-chart/depth-chart.component.html
@@ -35,7 +35,7 @@
 <br/>
 <div class="text-center">
   <img src="assets/img/20200615_034942.jpg" alt="Louise" class="img-fluid" width="500">
-  <p class="font-italic">"If an apple a day keeps the doctor away, then two apples a day keep the doctor away..."</p>
+  <p class="font-italic">"If an apple a day keeps the doctor away, then two apples will keep him away..."</p>
   <p class="font-italic">"For a whole week!"</p>
   <p class="font-italic">(hehe I'm Ruby's best friend)</p>
   <br/>
