--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
   <h5>"App!"</h5>
   <br/>
   <img src="assets/img/20200628_150626.jpg" width="500" alt="Max's Easter Egg Hunt" class="img-fluid">
-  <p class="font-italic">"Max, did you hide them?"</p>
+  <p class="font-italic">"Did you hide them, Max?"</p>
   <br/>
   <img src="assets/img/20200616_033850.jpg" width="500" alt="Max face" class="img-fluid">
   <p>Max's cute, classic "up to no good" face!</p>
