--- a/src/app/characters/characters.component.html
+++ b/src/app/characters/characters.component.html
@@ -11,8 +11,9 @@
 <br/>
 <div class="text-center">
   <img src="assets/img/20200418_043306.jpg" alt="Max Meets Morris" width="500" class="img-fluid">
-  <p class="font-italic">What could Max and Morris possibly be thinking?</p>
+  <p>What could Max and Morris possibly be thinking?</p>
   <br/>
   <img src="assets/img/20200424_193719.jpg" alt="Christmas Max" width="500" class="img-fluid">
+  <p class="font-italic">"Santa Claus!"</p>
 </div>
 <br/><br/>
