--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,12 +18,13 @@
         <li routerLinkActive="active" class="nav-item">
           <a routerLink="depth-chart" class="nav-link">Ruby's Best Friend Depth Chart</a>
         </li>
-        <li routerLinkActive="active" class="nav-item">
+        <li routerLinkActive="active" class="nav-item" *ngIf="loggedIn">
           <a href="#" class="nav-link">New Episode</a>
         </li>
       </ul>
       <div class="navbar-nav my-2 my-lg-0">
-        <a href="#" class="nav-link nav-item" routerLinkActive="active">Sign In</a>
+        <a routerLink="login" class="nav-link nav-item" routerLinkActive="active" *ngIf="!loggedIn">Sign In</a>
+        <a class="nav-link nav-item" *ngIf="loggedIn" (click)="onLogOut()">Sign Out</a>
       </div>
     </div>
   </div>
