new episode form

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,7 +19,7 @@
           <a routerLink="depth-chart" class="nav-link">Ruby's Best Friend Depth Chart</a>
         </li>
         <li routerLinkActive="active" class="nav-item" *ngIf="loggedIn">
-          <a href="#" class="nav-link">New Episode</a>
+          <a routerLink="new-episode" class="nav-link">New Episode</a>
         </li>
       </ul>
       <div class="navbar-nav my-2 my-lg-0">
