--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -2,11 +2,13 @@
 <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
   <div class="form-group">
     <label for="username">Username</label>
-    <input id="username" class="form-control" type="text" ngModel name="username" required>
+    <input id="username" class="form-control" type="text" ngModel name="username" required #username="ngModel">
+    <span class="help-block text-danger" *ngIf="!username.valid && username.touched">Please enter a username!</span>
   </div>
   <div class="form-group">
     <label for="password">Password</label>
-    <input id="password" class="form-control" type="password" ngModel name="password" required>
+    <input id="password" class="form-control" type="password" ngModel name="password" required #password="ngModel">
+    <span class="help-block text-danger" *ngIf="!password.valid && password.touched">Please enter a password!</span>
   </div>
   <button class="btn btn-primary" type="submit" [disabled]="!authForm.valid">Admin Login</button>
 </form>
