redirect to login without refresh

--- a/src/app/new-episode/new-episode.component.html
+++ b/src/app/new-episode/new-episode.component.html
@@ -68,7 +68,7 @@
         <input type="text" class="form-control" formControlName="words"/>
       </div>
       <div class="col-3">
-        <button type="button" class="btn btn-danger" (click)="onDeleteMaxWord(i)">X</button>
+        <button type="button" class="btn btn-danger" (click)="onDeleteMaxWords(i)">X</button>
       </div>
     </div>
     <br/>
