--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -13,6 +13,12 @@
   to live and grow up in.
 </p>
 <p>
+  The names of the toys that Max and Ruby play with in the series typically have adjectives that come before their
+  nouns. Examples for Max include Ear-splitter Space Cadet, Search-and-rescue Emergency Helicopter, Pedal-power Sports
+  Car, Tow-a-ton Tow Truck, and Yappy Puppy. Examples for Ruby include Curly Shirley, Can't-sit-up Slug, Walkie-Talkie
+  Bear, Slinky Snake, and You're-so-beautiful Make-up Kit.
+</p>
+<p>
   There are 7 seasons in this series. In seasons 1-5, each episode is split into three 7-8 minute segments and Max and
   Ruby's parents are not seen. In seasons 6-7, each episode is split into just two 12-minute segments and Max and
   Ruby's parents are seen. Max and Ruby do have parents, but because this app only focuses on seasons 1-5, their
@@ -41,6 +47,16 @@
 <p>
   About the sign in page. No the users can't create user accounts on this app. Sorry. The sign in feature is only for
   the admin, that's me. I can sign in and do administrative stuff on this app.
+</p>
+<p>
+  While working on the front-end of this app, I felt like Max playing with his toys, in particular his
+  remote-controlled Search-and-rescue Emergency Helicopter. It was fun to work on this front-end with Angular,
+  especially when I can immediately enjoy the fruits of my labor by seeing the beautiful front-end UI that I have been
+  working on and testing its behavior right away. It was even more fun to have pictures of the bunnies with captions in
+  my front-end to make it look like a colorful and fun-to-read picture book. I believe that programming should be like
+  playing with remote-controlled toy vehicles, because after all, you're telling the computer what to do and how to do
+  it with your code. Also, if Max likes his remote-controlled toys so much and is already so good at playing with them,
+  then I think he should try programming as well when he's older. He'll be a natural.
 </p>
 <p>Now that you have gotten all the way here, please enjoy the rest of this...</p>
 <p>"App!"</p>
