fixes to new episode form

--- a/src/app/new-episode/new-episode.component.html
+++ b/src/app/new-episode/new-episode.component.html
@@ -57,6 +57,8 @@
       once in this episode.
     </label>
   </div>
+  <br/>
+  <p>What words or phrases does Max (or Morris) say in this episode?</p>
   <div formArrayName="maxWords">
     <div
       class="row"
@@ -73,7 +75,7 @@
     </div>
     <br/>
     <button type="button" class="btn btn-success" (click)="onAddMaxWords()">
-      Add Words Or Phrases That Max Says In This Episode
+      Add Max's (or Morris') Distinct Lines
     </button>
   </div>
 </form>
