depth chart formatting

--- a/src/app/depth-chart/depth-chart.component.html
+++ b/src/app/depth-chart/depth-chart.component.html
@@ -35,9 +35,11 @@
 <br/>
 <div class="text-center">
   <img src="assets/img/20200615_034942.jpg" alt="Louise" class="img-fluid" width="500">
-  <p class="font-italic">"If an apple a day keeps the doctor away, then two apples will keep him away..."</p>
-  <p class="font-italic">"For a whole week!"</p>
-  <p class="font-italic">(hehe I'm Ruby's best friend)</p>
+  <p class="font-italic">
+    "If an apple a day keeps the doctor away, then two apples will keep him away..."<br>
+    "For a whole week!"<br>
+    (hehe I'm Ruby's best friend)
+  </p>
   <br/>
   <img src="assets/img/20200426_050240.jpg" alt="All together" class="img-fluid" width="500">
   <p class="font-italic">"YAAAY!"</p>
