handle session timeout and page titles

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,3 +1,5 @@
+<h1>Admin Login</h1>
+<br/>
 <div class="alert alert-danger d-none" id="wrong-cred">Invalid Admin Credentials.</div>
 <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
   <div class="form-group">
