--- a/src/app/characters/character-edit/character-edit.component.html
+++ b/src/app/characters/character-edit/character-edit.component.html
@@ -1,4 +1,4 @@
-<h1>Editing</h1>
+<h1>Editing Bunny Info for "{{editCharacterForm.value.name}}"</h1>
 <br/>
 <div class="alert alert-success alert-dismissible fade d-none" role="alert" id="bunny-saved">
   Bunny information successfully saved!
