--- a/src/app/characters/characters.component.html
+++ b/src/app/characters/characters.component.html
@@ -1,3 +1,5 @@
+<h1>Characters Page</h1>
+<br/>
 <form #searchChar="ngForm" (ngSubmit)="onSearch(searchChar)">
   <div class="row">
     <div class="col-md-8 form-group">
