--- a/src/app/new-episode/new-episode.component.html
+++ b/src/app/new-episode/new-episode.component.html
@@ -1,3 +1,5 @@
+<h1>New Episode Form</h1>
+<br/>
 <div class="text-center" *ngIf="addedEpisode">
   <app-loading-spinner></app-loading-spinner>
 </div>
