--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,6 +18,9 @@
         <li routerLinkActive="active" class="nav-item">
           <a routerLink="depth-chart" class="nav-link">Ruby's Best Friend Depth Chart</a>
         </li>
+        <li routerLinkActive="active" class="nav-item">
+          <a routerLink="misc" class="nav-link">Misc.</a>
+        </li>
         <li routerLinkActive="active" class="nav-item" *ngIf="loggedIn">
           <a routerLink="new-episode" class="nav-link">New Episode</a>
         </li>
