--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,5 +16,8 @@
   <br/>
   <img src="assets/img/20200616_033850.jpg" width="500" alt="Max face" class="img-fluid">
   <p>Max's cute, classic "up to no good" face!</p>
+  <br/>
+  <img src="assets/img/20201011_215517.jpg" width="500" alt="Max cheering" class="img-fluid">
+  <p class="font-italic">"OK Max, that's it! I can't hear a thing!"</p>
   <br/><br/>
 </div>
