more misc stuffs

--- a/src/app/misc/misc.component.html
+++ b/src/app/misc/misc.component.html
@@ -10,11 +10,10 @@
       &#9834; Max and Ruby. &#9834;<br/>
       &#9834; Ruby and Max. &#9834;<br/>
       Max and Ruby.<br/>
-      Ruby and her little brother Max.<br/>
+      Ruby, and her little brother Max.<br/>
     </span>
     kids shouting: "MACKSXZ AN' ROOBEE!!!" (giggling)
   </p>
-  <br/>
   <h3>Egg Song</h3>
   <h6>
     Performed on the radio at the opening of "Max's Breakfast", and after the conclusion of "Super Bunny" in "Super Max"
@@ -23,18 +22,16 @@
     &#9834; Start your day in a healthy way. &#9834;<br/>
     &#9834; Egg. Egg. Egg. &#9834;<br/>
     &#9834; Start your day in a healthy way. &#9834;<br/>
-    &#9834; Egg. Egg. Egg. &#9834;<br/>
+    &#9834; Egg. Egg. Egg. &#9834;
   </p>
-  <br/>
   <h3>Ruby's Dolly Lullaby</h3>
   <h6>Performed by Ruby to her dollies in "Max's Bedtime"</h6>
   <p class="font-italic">
     &#9834; Lullaby, and good night. &#9834;<br/>
     &#9834; Shut your eyes and sleep tight. &#9834;<br/>
     &#9834; Curly Shirley, Quack-Quack Duck. &#9834;<br/>
-    &#9834; Under blankets I will tuck. &#9834;<br/>
+    &#9834; Under blankets I will tuck. &#9834;
   </p>
-  <br/>
   <h3>Ruby and Louise's Club Song</h3>
   <h6>Performed by Ruby and Louise upon formation of their private club in "Ruby's Clubhouse"</h6>
   <p class="font-italic">
@@ -42,7 +39,6 @@
     Here's to our club.<br/>
     YAY BUNNIES!!!
   </p>
-  <br/>
   <h3>The Blue Tarantula</h3>
   <h6>The bedtime story that Ruby reads to Max in "The Blue Tarantula"</h6>
   <p>
@@ -57,14 +53,13 @@
 <!--      *this middle part I made up*<br/>-->
 <!--      The Blue Tarantula knew that earlier that day, a bunny named Ryne saw a spider on the floor and stepped on it.<br/>-->
 <!--      To avenge that spider's horrible end, the Blue Tarantula was at Ryne's house that night.<br/>-->
-<!--      While Ryne was fast asleep, the Blue Tarantula removed him from his bed and...SQUISH!<br/>-->
+<!--      While Ryne was fast asleep, the Blue Tarantula removed him from his bed and...SPLAT!<br/>-->
 <!--      Ryne met the same grotesque fate as the spider he stepped on that day.<br/>-->
 <!--      *back to the original story*-->
       So, the next time you squish a bug, WATCH OUT! The Blue Tarantula might just squish you!<br/>
     </span>
     The end.
   </p>
-  <br/>
   <h3>Apple Pie Song Game</h3>
   <h6>Performed by Ruby and Louise throughout "Max's Apple", albeit with interruptions from Max</h6>
   <p>
@@ -80,7 +75,6 @@
     </span>
     "Apple!"
   </p>
-  <br/>
   <h3>Bunny Scout Oath</h3>
   <h6>Recited by Ruby and Louise before they go down "Rocket Run" in "Max's Rocket Run"</h6>
   <p class="font-italic">
@@ -88,7 +82,36 @@
     When a job must be done, what do we do?<br/>
     Hop to it!
   </p>
-  <br/>
+  <h3>Scavenger Hunt Clues</h3>
+  <h6>Presented by Bunny Scout Leader to the Bunny Scouts in "Ruby's Scavenger Hunt"</h6>
+  <h5>First Clue</h5>
+  <p>
+    <span class="font-italic">
+      I'm light and I float and I have a golden hue.<br/>
+      To see me, you might need a birds-eye view.<br/>
+    </span>
+    Answer: Feather from a Yellow-breasted Warbler
+  </p>
+  <h5>Second Clue</h5>
+  <p>
+    <span class="font-italic">
+      To find my green leaf is the thing you must do.<br/>
+      I'm a tree with white flowers, and here's your big clue.<br/>
+      Though I'm really a tree here in the park,<br/>
+      If I were your pet, you'd expect me to bark.<br/>
+    </span>
+    Answer: Leaf from a Dogwood tree
+  </p>
+  <h5>The Last Clue</h5>
+  <p>
+    <span class="font-italic">
+      Inside a ripe apple you've picked from a tree,<br/>
+      Or on the end of a fishing line you drop in the sea,<br/>
+      These are just a few places that we can be found.<br/>
+      But truly, our home is deep in the ground.<br/>
+    </span>
+    Answer: Earthworm
+  </p>
 
   <img src="assets/img/20201013_012841.jpg" alt="Brownies" width="500" class="img-fluid">
   <p class="font-italic">"Brownies!"</p>
