updated misc page

--- a/src/app/misc/misc.component.html
+++ b/src/app/misc/misc.component.html
@@ -75,7 +75,7 @@
     </span>
     "Apple!"
   </p>
-  <h3>Bunny Scout Oath</h3>
+  <h3>Bunny Scout Slogan</h3>
   <h6>Recited by Ruby and Louise before they go down "Rocket Run" in "Max's Rocket Run"</h6>
   <p class="font-italic">
     Bunny Scouts are brave and true.<br/>
@@ -115,5 +115,8 @@
 
   <img src="assets/img/20201013_012841.jpg" alt="Brownies" width="500" class="img-fluid">
   <p class="font-italic">"Brownies!"</p>
+  <br/>
+  <img src="assets/img/20201019_133700.jpg" alt="Where the berries go?" width="500" class="img-fluid">
+  <p class="font-italic">"Where did the blueberries go? MAX!"</p>
   <br/><br/>
 </div>
