butterfly and stuffing

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,6 +19,9 @@
           <a routerLink="depth-chart" class="nav-link">Ruby's Best Friend Depth Chart</a>
         </li>
         <li routerLinkActive="active" class="nav-item">
+          <a routerLink="photos" class="nav-link">Photos</a>
+        </li>
+        <li routerLinkActive="active" class="nav-item">
           <a routerLink="misc" class="nav-link">Misc.</a>
         </li>
         <li routerLinkActive="active" class="nav-item" *ngIf="loggedIn">
