--- a/src/app/misc/misc.component.html
+++ b/src/app/misc/misc.component.html
@@ -113,10 +113,14 @@
     Answer: Earthworm
   </p>
 
+  <p>"App!"</p>
   <img src="assets/img/20201013_012841.jpg" alt="Brownies" width="500" class="img-fluid">
   <p class="font-italic">"Brownies!"</p>
   <br/>
   <img src="assets/img/20201019_133700.jpg" alt="Where the berries go?" width="500" class="img-fluid">
   <p class="font-italic">"Where did the blueberries go? MAX!"</p>
+  <br/>
+  <img src="assets/img/20201020_164822.jpg" alt="Stuffing" width="500" class="img-fluid">
+  <p class="font-italic">"Stuffing!"</p>
   <br/><br/>
 </div>
