--- a/src/app/misc/misc.component.html
+++ b/src/app/misc/misc.component.html
@@ -112,6 +112,27 @@
     </span>
     Answer: Earthworm
   </p>
+  <h3>One Potato</h3>
+  <h6>Performed by Valerie while determining who will be it for freeze tag in "Max Is It"</h6>
+  <p class="font-italic">
+    One potato, two potato, three potato, four.<br/>
+    Five potato, six potato, seven potato, more.
+  </p>
+  <h3>Ghost Bunny</h3>
+  <h6>A ghost story told by Valerie in "Ghost Bunny"</h6>
+  <p>
+    <span class="font-italic">
+      This is the story of Ghost Bunny.<br/>
+      Ghost Bunny is the biggest, most ferocious bunny you've ever seen.<br/>
+      You never know where Ghost Bunny is going to come from. He's so big, he can be in two places at once.<br/>
+      There's no escaping Ghost Bunny. His ears are so big, he can hear the tiniest sound right across town.<br/>
+      His nose is so sensitive, he can smell his favourite food from miles away. And you know what his favourite food is?<br/>
+      S'mores.<br/>
+      Ghost Bunny is so quiet, you can't hear him coming, unless he makes a mistake and steps on a twig.<br/>
+    </span>
+    ...<br/>
+    "Ghost Bunny!"
+  </p>
 
   <p>"App!"</p>
   <img src="assets/img/20201013_012841.jpg" alt="Brownies" width="500" class="img-fluid">
