--- a/src/app/misc/misc.component.html
+++ b/src/app/misc/misc.component.html
@@ -85,32 +85,23 @@
   <h3>Scavenger Hunt Clues</h3>
   <h6>Presented by Bunny Scout Leader to the Bunny Scouts in "Ruby's Scavenger Hunt"</h6>
   <h5>First Clue</h5>
-  <p>
-    <span class="font-italic">
-      I'm light and I float and I have a golden hue.<br/>
-      To see me, you might need a birds-eye view.<br/>
-    </span>
-    Answer: Feather from a Yellow-breasted Warbler
+  <p class="font-italic">
+    I'm light and I float and I have a golden hue.<br/>
+    To see me, you might need a birds-eye view.<br/>
   </p>
   <h5>Second Clue</h5>
-  <p>
-    <span class="font-italic">
-      To find my green leaf is the thing you must do.<br/>
-      I'm a tree with white flowers, and here's your big clue.<br/>
-      Though I'm really a tree here in the park,<br/>
-      If I were your pet, you'd expect me to bark.<br/>
-    </span>
-    Answer: Leaf from a Dogwood tree
+  <p class="font-italic">
+    To find my green leaf is the thing you must do.<br/>
+    I'm a tree with white flowers, and here's your big clue.<br/>
+    Though I'm really a tree here in the park,<br/>
+    If I were your pet, you'd expect me to bark.<br/>
   </p>
   <h5>The Last Clue</h5>
-  <p>
-    <span class="font-italic">
-      Inside a ripe apple you've picked from a tree,<br/>
-      Or on the end of a fishing line you drop in the sea,<br/>
-      These are just a few places that we can be found.<br/>
-      But truly, our home is deep in the ground.<br/>
-    </span>
-    Answer: Earthworm
+  <p class="font-italic">
+    Inside a ripe apple you've picked from a tree,<br/>
+    Or on the end of a fishing line you drop in the sea,<br/>
+    These are just a few places that we can be found.<br/>
+    But truly, our home is deep in the ground.<br/>
   </p>
   <h3>One Potato</h3>
   <h6>Performed by Valerie while determining who will be it for freeze tag in "Max Is It"</h6>
@@ -132,6 +123,30 @@
     </span>
     ...<br/>
     "Ghost Bunny!"
+  </p>
+  <h3>Rules of a Good Hostess</h3>
+  <h6>The requirements a Bunny Scout must follow to earn her Hospitality Badge, as featured in "Max's Dominoes"</h6>
+<!--  <p>-->
+<!--    A good hostess...<br/>-->
+<!--    1. Serves refreshments.<br/>-->
+<!--    2. Makes beautiful decorations.<br/>-->
+<!--    3. (most important) Always stays calm when things go wrong.-->
+<!--  </p>-->
+  <div class="hostess-rules">
+    <p>A good hostess...</p>
+    <ol>
+      <li>Serves refreshments.</li>
+      <li>Makes beautiful decorations.</li>
+      <li>(most important) Always stays calm when things go wrong.</li>
+    </ol>
+  </div>
+  <h3>Bunny Scout Jump Rope Rhyme</h3>
+  <h6>The rhyme that Ruby and Louise practice jumping rope to in "Fireman Max"</h6>
+  <p>
+    Bunny Scouts, Bunny Scouts, dressed in green.<br/>
+    Wave to Bunny Scout Leader, curtsy for the Queen.<br/>
+    Now jump all the way to Number Thirteen.<br/>
+    1, 2, 3,...13.
   </p>
 
   <p>"App!"</p>
