--- a/src/app/photos/photos.component.html
+++ b/src/app/photos/photos.component.html
@@ -1,6 +1,7 @@
 <h1>Photos</h1>
 <p>
-  The following photos are Ruby's attempts at taking the perfect photo of her and Max to give as a gift to Grandma.
+  Unless otherwise specified, the following photos are Ruby's attempts at taking the perfect photo of her and Max to
+  give as a gift to Grandma or Ruby and Louise's attempts at taking nature photos for a Bunny Scout badge.
 </p>
 <div class="text-center">
   <h3>The Big Picture</h3>
@@ -12,4 +13,11 @@
   <br/><br/>
   <img src="assets/img/20201024_013220.jpg" alt="The Big Picture Final Product" width="500" class="img-fluid">
   <p class="font-italic">"Butterfly!"</p>
+  <h3>Grandma's Attic</h3>
+  <p>
+    This picture is of Grandma and Grandpa attending the annual Bunnyhop, dressed in the outfits that Max and Ruby are
+    dressed in while playing dress-up in Grandma's attic.
+  </p>
+  <img src="assets/img/20201031_015043.jpg" alt="Grandma's Treasure" width="500" class="img-fluid">
+  <p class="font-italic">"Treasure!"</p>
 </div>
