max & ruby had a farm

--- a/src/app/misc/misc.component.html
+++ b/src/app/misc/misc.component.html
@@ -126,12 +126,6 @@
   </p>
   <h3>Rules of a Good Hostess</h3>
   <h6>The requirements a Bunny Scout must follow to earn her Hospitality Badge, as featured in "Max's Dominoes"</h6>
-<!--  <p>-->
-<!--    A good hostess...<br/>-->
-<!--    1. Serves refreshments.<br/>-->
-<!--    2. Makes beautiful decorations.<br/>-->
-<!--    3. (most important) Always stays calm when things go wrong.-->
-<!--  </p>-->
   <div class="hostess-rules">
     <p>A good hostess...</p>
     <ol>
@@ -144,9 +138,42 @@
   <h6>The rhyme that Ruby and Louise practice jumping rope to in "Fireman Max"</h6>
   <p>
     Bunny Scouts, Bunny Scouts, dressed in green.<br/>
-    Wave to Bunny Scout Leader, curtsy for the Queen.<br/>
+    Wave to Bunny Scout Leader, curtsy for The Queen.<br/>
     Now jump all the way to Number Thirteen.<br/>
     1, 2, 3,...13.
+  </p>
+  <h3>Star Light, Star Bright</h3>
+  <h6>Ruby and Louise's wish to the Stars for fireworks as recited in "Max's Fire Flies"</h6>
+  <p class="font-italic">
+    Star light, star bright,<br/>
+    First star I see tonight.<br/>
+    I wish I may, I wish I might...<br/>
+    See some fireworks tonight.
+  </p>
+  <h3>Max & Ruby Had a Farm</h3>
+  <h6>Performed by Ruby and Max's animal toys during a rehearsal in "Ruby's Sing Along"</h6>
+  <h6>Max's animal toys used: Yappy Puppy, Rolie-Polie Pig, and Quacking Duck</h6>
+  <p class="font-italic">
+    &#9834; Max and Ruby Had a Farm. &#9834;<br/>
+    &#9834; E-I-E-I-O &#9834;<br/>
+    &#9834; And on their farm they had a Puppy. &#9834;<br/>
+    &#9834; E-I-E-I-O &#9834;<br/>
+    &#9834; With a *arf-arf* here, and a *arf-arf* there. &#9834;<br/>
+    &#9834; Here *arf*, there *arf*, everywhere *arf-arf*. &#9834;<br/>
+    &#9834; Max and Ruby Had a Farm. &#9834;<br/>
+    &#9834; E-I-E-I-O &#9834;<br/>
+    &#9834; And on their farm they had a Duck. &#9834;<br/>
+    &#9834; E-I-E-I-O &#9834;<br/>
+    &#9834; With a *quack-quack* here, and a *quack-quack* there. &#9834;<br/>
+    &#9834; Here *quack*, there *quack*, everywhere *quack-quack*. &#9834;<br/>
+    &#9834; Max and Ruby Had a Farm. &#9834;<br/>
+    &#9834; E-I-E-I-O &#9834;<br/>
+    &#9834; And on their farm they had a Pig. &#9834;<br/>
+    &#9834; E-I-E-I-O &#9834;<br/>
+    &#9834; With a *squeal-squeal* here, and a *squeal-squeal* there. &#9834;<br/>
+    &#9834; Here *squeal*, there *squeal*, everywhere *squeal-squeal*. &#9834;<br/>
+    &#9834; Max and Ruby Had a Farm. &#9834;<br/>
+    &#9834; E-I-E-I-OOOOOooooo &#9834;
   </p>
 
   <p>"App!"</p>
