--- a/src/app/photos/photos.component.html
+++ b/src/app/photos/photos.component.html
@@ -15,9 +15,12 @@
   <p class="font-italic">"Butterfly!"</p>
   <h3>Grandma's Attic</h3>
   <p>
-    This picture is of Grandma and Grandpa attending the annual Bunnyhop, dressed in the outfits that Max and Ruby are
-    dressed in while playing dress-up in Grandma's attic.
+    This old picture is of Grandma and Grandpa attending the annual Bunnyhop, dressed in the outfits that Max and Ruby
+    are dressed in while playing dress-up in Grandma's attic.
   </p>
   <img src="assets/img/20201031_015043.jpg" alt="Grandma's Treasure" width="500" class="img-fluid">
   <p class="font-italic">"Treasure!"</p>
+  <h3>Ruby's Safari</h3>
+  <img src="assets/img/20201109_050254.jpg" alt="Ruby's Safari" width="500" class="img-fluid">
+  <br/><br/>
 </div>
